# soad

./: .flake8  flake.nix  init_db.py  pyproject.toml
brokers/: alpaca_broker.py  base_broker.py  kraken_broker.py  tastytrade_broker.py  tradier_broker.py
data/: sync_worker.py
database/: db_manager.py  models.py
examples/: my_custom_strategy.py
order_manager/: manager.py
soad/: main.py
soad/utils/: logger.py
strategies/: base_strategy.py  black_swan_strategy.py  constant_percentage_strategy.py  random_yolo_hedge_strategy.py  simple_strategy.py
tests/: base_test.py  conftest.py  test_alpaca.py  test_brokers.py  test_config_parser.py  test_constant_percentage_strategy.py  test_kraken.py  test_main.py  test_simple_strategy.py  test_strategies.py  test_sync_worker.py  test_tastytrade_broker.py  test_tradier_broker.py  test_ui.py  test_utils.py
