[tool.poetry]
name = "soad"
version = "0.1.0"
description = ""
authors = ["Raphel Deem <raphael.deem@gmail.com>", "<Mike Kalange countablecloud@gmail.com>"]
readme = "README.md"
packages = [
    { include = "soad"}
]

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.36"
pytest = "^8.3.3"
tastytrade = "8.3"
pytest-asyncio = "^0.24.0"
requests-oauthlib = "^2.0.0"
PyYAML = "^6.0.2"
Flask = "^3.1.0"
Flask-Cors = "^5.0.0"
Flask-JWT-Extended = "^4.7.1"
python-json-logger = "^2.0.7"
pytz = "^2024.2"
numpy = "^2.1.3"
scipy = "^1.14.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
websocket-client = "^1.8.0"
yfinance = "^0.2.50"
greenlet = "^3.1.1"
python-dotenv = "^1.0.1"
aiohttp = "^3.11.8"
asyncio = "^3.4.3"
freezegun = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
